<resources>
    <string name="app_name">詩雲</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task1">关卡一 · 填诗句</string>
    <string name="task2">关卡二 · 悟诗意</string>
    <string name="task3">关卡三 · 飞花令</string>

    <string name="map1">怀古咏史</string>
    <string name="map2">写景抒情</string>
    <string name="map3">咏物言志</string>
    <string name="map4">边塞征战</string>
    <string name="map5">即事感怀</string>

    <string name="next">下一题</string>
    <string name="before">上一题</string>
    <string name="addbook">加入错题本</string>
    <string name="submit">提交</string>

    <string name="user">用户</string>
    <string name="logout">登出</string>
    <string name="checkbook">查看错题本</string>

    <string name="application">应用设置</string>
    <string name="bgm">背景音乐</string>
    <string name="notice">学习助手</string>

    <string name="about">关于项目</string>
    <string name="project">项目源码</string>

    <string name="take_photo">拍照</string>
    <string name="choose_from_album">从相册选取</string>

    <string name="slogan">人，诗意的栖居</string>

    <string name="login">登录</string>
    <string name="signup">注册</string>
    <string name="password">密码</string>
    <string name="email">邮箱</string>

</resources>