<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF3EE">



    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="32dp"
        android:paddingRight="32dp"
        android:paddingTop="64dp"
        android:background="@drawable/login_back"
        >





        <EditText
            android:id="@+id/email"
            style="@style/SignupEditText"

            android:layout_marginTop="400dp"
            android:layout_centerHorizontal="true"
            android:hint="@string/email"
            />

        <EditText
            android:id="@+id/password"
            style="@style/SignupEditText"
            android:layout_below="@+id/email"
            android:layout_centerHorizontal="true"

            android:hint="@string/password"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/login"
            style="@style/SignupTextView"
            android:layout_below="@+id/password"
            android:layout_marginTop="60dp"
            android:text="@string/login"
            android:layout_centerHorizontal="true"
            android:textColor="@color/bright_red"
            />

        <Button
            android:id="@+id/signup"
            style="@style/SignupTextView"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/login"
            android:layout_centerHorizontal="true"
            android:text="@string/signup"

            />

    </RelativeLayout>

</RelativeLayout>