<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.TaskActivity">

    <Button
        android:id="@+id/task1"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/choicedark"
        android:scaleType="center"
        android:text="@string/task1"
        android:textSize="30dp"
        ></Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"></TextView>

    <Button
        android:id="@+id/task2"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/choicedark"
        android:text="@string/task2"
        android:textSize="30dp"
        ></Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="25dp"></TextView>

    <Button
        android:id="@+id/task3"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_gravity="center_vertical"
        android:background="@drawable/choicedark"
        android:layout_marginBottom="200dp"
        android:text="@string/task3"
        android:textSize="30dp"></Button>

</LinearLayout>