<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/map_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@xml/map_layer">

    <Button
        android:id="@+id/map1"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginBottom="150dp"
        android:background="@android:color/transparent"
        android:text="@string/map1"
        android:textColor="#19160F"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/map3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.446"
        app:layout_constraintStart_toEndOf="@+id/map2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.556"></Button>

    <Button
        android:id="@+id/map2"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="240dp"
        android:background="@android:color/transparent"
        android:text="@string/map2"
        android:textColor="#19160F"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></Button>

    <Button
        android:id="@+id/map3"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="128dp"
        android:background="@android:color/transparent"
        android:text="@string/map3"
        android:textColor="#19160F"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/map5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933"></Button>

    <Button
        android:id="@+id/map4"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="200dp"
        android:background="@android:color/transparent"
        android:text="@string/map4"
        android:textColor="#19160F"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/map3"
        app:layout_constraintHorizontal_bias="0.149"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map2"
        app:layout_constraintVertical_bias="0.545"></Button>

    <Button
        android:id="@+id/map5"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        android:layout_marginBottom="164dp"
        android:background="@android:color/transparent"
        android:text="@string/map5"
        android:textColor="#19160F"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"></Button>


</androidx.constraintlayout.widget.ConstraintLayout>